syntax = "proto3";
package user;
option go_package = "user/proto";

import "user.proto";

service UserService {
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}