syntax = "proto3";
package user;
option go_package = "user/proto";

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string role = 4;
  optional string phone = 5;
}

message UpdateUserRequest {
  string user_id = 1;
  optional string email = 2;
  optional string password = 3;
  optional string name = 4;
  optional string phone = 5;
}

message DeleteUserRequest {
  string user_id = 1;
}

message RegisterUserResponse {
  string user_id = 1;
  bool success = 2;
  string message = 3;
}

message UpdateUserResponse {
  string user_id = 1;
  bool success = 2;
  string message = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}